# flange

./: Cargo.toml  Dockerfile  Dockerfile-build  README.md  TODO.md  __.nu  __.toml  config.toml  drill.yaml
.github/workflows/: main.yaml
assets/: ai.tmpl.json  greet.json  layout.json  segment.tmpl.json  user.json  webhook_error.json
data/message/: chat.yaml  event.yaml  login.yaml
data/sandbox/: deserialize.rs  hashmap.rs  minijinja.rs  notify.rs  rdkafka_producer.rs  serde_enum.rs  serde_escape.json  serde_escape.rs  serde_tuple.rs  session_manager.rs  time.rs
example/: event.yaml  hashmap.rs  rdkafka_consumer.rs  rdkafka_producer.rs
sandbox/: event.yaml  kafka_consumer.rs  rdkafka_producer.rs
src/: main.rs
src/libs/: admin.rs  channel.rs  error.rs  event.rs  kafka.rs  message.rs  mod.rs  settings.rs  shared.rs  store.rs  template.rs  webhooks.rs  websocket.rs
