[package]
name = "flange"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["ws", "macros"] }
futures = { version = "0.3.31" }
rdkafka = { version = "0.37", features = ["cmake-build"] }
libc = "0.2.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ['full'] }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = "0.3.19"
figment = { version = "0.10.19", features = ["toml", "env"] }
notify = "8.0.0"

